k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-deployment
  namespace: devops

spec:
#  replicas: 1

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
#      serviceAccountName: api-service-account
      containers:
        - name: api-container
          image: devops-app:3.0

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"
