k8s/message-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: message-service-deployment
  namespace: devops

spec:
  replicas: 1

  selector:
    matchLabels:
      app: message-service

  template:

    metadata:
      labels:
        app: message-service

    spec:
      containers:
        - name: message-service-container
          image: message-service:1.0
          ports:
            - containerPort: 9000

          readinessProbe:
            httpGet:
              path: /health
              port: 9000

          livenessProbe:
            httpGet:
              path: /health
              port: 9000

          volumeMounts:
            - name: message-data
              mountPath: /data

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

#      volumes:
#        - name: message-data
#          emptyDir: {}
      volumes:
        - name: message-data
          persistentVolumeClaim:
            claimName: message-data-pvc
