k8s/api-service.yml
apiVersion: v1
kind: Service

metadata:
  name: api-svc
  namespace: devops

spec:
  selector:
    app: api

  ports:
    - port: 8000
      targetPort: 8000

  type: NodePort
