k8s/food-service.yml
apiVersion: v1
kind: Service

metadata:
  name: food-service-svc
  namespace: devops

spec:
  selector:
    app: food-service

  ports:
    - port: 9100
      targetPort: 9100

  type: ClusterIP
