k8s/message-service.yml
apiVersion: v1
kind: Service

metadata:
  name: message-service-svc
  namespace: devops

spec:
  selector:
    app: message-service

  ports:
    - port: 9000
      targetPort: 9000

  type: ClusterIP
