k8s/food-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: food-service-policy
  namespace: devops

spec:
  podSelector:
    matchLabels:
      app: food-service

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api

      ports:
        - protocol: TCP
          port: 9100
