k8s/message-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: message-service-policy
  namespace: devops

spec:
  podSelector:
    matchLabels:
      app: message-service

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api

      ports:
        - protocol: TCP
          port: 9000
